--- a/settings/nitrofiles/languages/german.ini
+++ b/settings/nitrofiles/languages/german.ini
@@ -165,7 +165,7 @@ DESCRIPTION_CPUSPEED_1=Wenn TWL gewählt wurde, kann das helfen, wenn Spiele sic
 DESCRIPTION_VRAMBOOST_1=Ermöglicht 8-Bit VRAM-Zugriff und erweitert den Bus auf 32-Bit.
 DESCRIPTION_USEBOOTSTRAP=nds-bootstrap wird anstelle des Flashcard-Kernels oder der Firmware verwendet.
 DESCRIPTION_FCSAVELOCATION=Wähle den Speicherort von Slot-1 SD (oder Flashcard) aus.
-DESCRIPTION_FORCESLEEPMODE=Wenn eine bestimmte Slot-1-Karte verhindert, der Ruhemodus zu funktionieren, schalte diese bitte ein. Vergiss nicht, dies auszuschalten, wenn du eine handelsübliche Spielkarte eingesetzt hast.
+DESCRIPTION_FORCESLEEPMODE=Wenn eine Slot-1-Karte verhindert, dass der Schlafmodus funktioniert, schalte das bitte ein. Denke daran, es auszuschalten, wenn eine handelsübliche Spielkarte eingelegt ist.
 DESCRIPTION_SLOT1SDACCESS=Habe Zugriff auf die SD-Karte der Konsole, während eine Slot-1-Flashkarte läuft.
 DESCRIPTION_SLOT1SCFGUNLOCK=Habe Zugang zu SCFG, während eine Slot-1-Flashcard verwendet wird. Erlaubt einstellen des erweiterten Speichermodus und/oder der Taktrate in Flashcard-HB.
 DESCRIPTION_SLOT1LAUNCHMETHOD_1=Ändere diese Einstellung, wenn einige Slot-1 Karten nicht starten. Bitte beachte, dass die Neustart-Methode nicht die eingestellte Sprache oder CPU Geschwindigkeit benutzt.
