--- a/settings/nitrofiles/languages/italian.ini
+++ b/settings/nitrofiles/languages/italian.ini
@@ -18,8 +18,8 @@ UPDATE_RECENTLY_PLAYED_LIST=Aggiorna la lista giochi recenti
 SORT_METHOD=Ordinamento
 DIRECTORIES=Directory/Cartelle
 SHOW_HIDDEN=Mostra file nascosti
-PREVENT_ROM_DELETION=Impedisci di cancellare o eliminare ROM
-BOXART=Box art/Copertine dei giochi
+PREVENT_ROM_DELETION=Impedisci di nascondere o eliminare ROM
+BOXART=Box art
 ANIMATEDSIICONS=Icone DSi animate
 CLOCK_SYSTEM=Impostaz. Orologio
 AK_SCROLLSPEED=Velocità di scorrimento
@@ -65,7 +65,7 @@ DESCRIPTION_DIRECTORIES_1=Se sei in una cartella dove sono presenti molti dei tu
 DESCRIPTION_SHOW_HIDDEN_1=Se attivato, anche se un'app è nascosta verrà visualizzata comunque.
 DESCRIPTION_PREVENT_ROM_DELETION_1=Quando è attivato, la funzione di nascondere/eliminare ROM è disabilitata. Nota anche che questo impedisce di non nascondere le ROM.
 DESCRIPTION_BOXART=Mostra le copertine dei giochi sullo schermo superiore dei temi Nintendo DSi/3DS.
-DESCRIPTION_BOXART_DSI=Mostra le copertina dei giochi sullo schermo superiore dei temi Nintendo DSi/3DS. Le cache permettono uno scorrimento più fluido al costo del caricamento della lista delle ROM più lento.
+DESCRIPTION_BOXART_DSI=Mostra le copertine sullo schermo superiore dei temi Nintendo DSi/3DS. Le cache permettono uno scorrimento più fluido al costo del caricamento della lista delle ROM più lento.
 DESCRIPTION_ANIMATEDSIICONS_1=Anima le icone dei titoli DSi-enhanced.
 DESCRIPTION_CLOCK_SYSTEM=Usa o un'orologio a 12 ore o uno a 24 ore.
 DESCRIPTION_AK_SCROLLSPEED=Imposta la velocità di scorrimento nel tema Wood UI.
@@ -178,7 +178,7 @@ DESCRIPTION_EXPANDROMSPACE_DSI=Estende lo spazio ROM nella RAM da 8MB a 12MB, o 
 DESCRIPTION_EXPANDROMSPACE_3DS=Estende lo spazio ROM nella RAM da 24MB a 28MB, o per i giochi SDK5, da 16MB a 28MB. Non fa funzionare alcuni giochi che stanno nella RAM.
 DESCRIPTION_CACHEBLOCKSIZE=A seconda delle dimensioni, alcune aree dei giochi DS(i) caricheranno leggermente più velocemente o più lentamente.
 DESCRIPTION_SAVEFATTABLECACHE=Salva la cache creata della Tavola FAT come un file di 512kb. Se si verifica una corruzione dell'SD, disattivala.
-DESCRIPTION_BOOTSTRAP_1=Scegli se usare bootstrap in versione rilascio o notturna
+DESCRIPTION_BOOTSTRAP_1=Scegli se usare bootstrap in versione rilascio o in versione notturna
 DESCRIPTION_DEBUG_1=Mostra del testo prima di avviare il gioco.
 DESCRIPTION_LOGGING_1=Registra il processo di patch in sd:/NDSBTSRP.LOG
 
