--- a/settings/nitrofiles/languages/german.ini
+++ b/settings/nitrofiles/languages/german.ini
@@ -6,6 +6,7 @@ GUI_SETTINGS=GUI-Einstellungen
 EMULATION_HB_SETTINGS=Emulations-/HB-Einstellungen
 GBARUNNER2_SETTINGS=GBARunner2 Emulations-Einstell.
 GAMESAPPS_SETTINGS=Spiel- und App-Einstellungen
+UNLAUNCH_SETTINGS=Unlaunch settings
 PRESS_A=Drücke \A
 
 ; GUI settings
@@ -165,7 +166,7 @@ DESCRIPTION_CPUSPEED_1=Wenn TWL gewählt wurde, kann das helfen, wenn Spiele sic
 DESCRIPTION_VRAMBOOST_1=Ermöglicht 8-Bit VRAM-Zugriff und erweitert den Bus auf 32-Bit.
 DESCRIPTION_USEBOOTSTRAP=nds-bootstrap wird anstelle des Flashcard-Kernels oder der Firmware verwendet.
 DESCRIPTION_FCSAVELOCATION=Wähle den Speicherort von Slot-1 SD (oder Flashcard) aus.
-DESCRIPTION_FORCESLEEPMODE=Wenn eine bestimmte Slot-1-Karte verhindert, der Ruhemodus zu funktionieren, schalte diese bitte ein. Vergiss nicht, dies auszuschalten, wenn du eine handelsübliche Spielkarte eingesetzt hast.
+DESCRIPTION_FORCESLEEPMODE=Wenn eine Slot-1-Karte verhindert, dass der Schlafmodus funktioniert, schalte das bitte ein. Denke daran, es auszuschalten, wenn eine handelsübliche Spielkarte eingelegt ist.
 DESCRIPTION_SLOT1SDACCESS=Habe Zugriff auf die SD-Karte der Konsole, während eine Slot-1-Flashkarte läuft.
 DESCRIPTION_SLOT1SCFGUNLOCK=Habe Zugang zu SCFG, während eine Slot-1-Flashcard verwendet wird. Erlaubt einstellen des erweiterten Speichermodus und/oder der Taktrate in Flashcard-HB.
 DESCRIPTION_SLOT1LAUNCHMETHOD_1=Ändere diese Einstellung, wenn einige Slot-1 Karten nicht starten. Bitte beachte, dass die Neustart-Methode nicht die eingestellte Sprache oder CPU Geschwindigkeit benutzt.
@@ -187,7 +188,6 @@ LANGUAGE=Sprache
 GAMELANGUAGE=Spielsprache
 TITLELANGUAGE=Spieltitelsprache
 COLORMODE=Farbmodus
-UNLAUNCH_BG=Unlaunch BG
 SDREMOVALDETECTION=SD-Entfernungserkennung
 S1SDACCESS=Slot-1-microSD-Zugang
 WIFI=Wi-Fi
@@ -212,7 +212,6 @@ DESCRIPTION_LANGUAGE_1=Wähle eine Sprache aus, ohne die eingestellte Sprache de
 DESCRIPTION_GAMELANGUAGE_1=Lege die Sprache für DS-ROMs fest, die mit nds-bootstrap gespielt werden.
 DESCRIPTION_TITLELANGUAGE_1=Lege Banner Titel-Sprache für DS-ROMs fest (außer DSiWare).
 DESCRIPTION_COLORMODE=Ändert die Farbe deiner Bildschirme. Funktioniert eventuell nicht in allen Bereichen. Verlasse die Einstellungen, damit die Änderung wirksam wird.
-DESCRIPTION_UNLAUNCH_BG=Ändert den Standardhintergrund von Unlaunch. Erfordert eine Neuinstallation von Unlaunch.
 DESCRIPTION_SDREMOVALDETECTION=Aktiviert/deaktiviert die Erkennung von SD-Entfernungen. Deaktiviere sie, wenn anstatt des ROM-Menüs eine Fehlermeldung angezeigt wird.
 DESCRIPTION_S1SDACCESS_1=Ermöglicht die Verwendung deiner Speicherkarte als sekundäres Gerät. Schalte dies aus, wenn die IR-Funktionalität nicht funktioniert oder wenn die App abstürzt.
 DESCRIPTION_WIFI=Wählen Sie, ob Nintendo WiFi Verbindung verwendet werden soll. DS-Download-Spiel wird nicht beeinflusst.
@@ -225,6 +224,13 @@ DESCRIPTION_SYSREGION_1=Die Region von SysNAND. Die Option "Automatisch" funktio
 DESCRIPTION_LAUNCHERAPP=Um den .app-Namen zu erhalten, drücke POWER, halte \A + \B gedrückt und markiere dann LAUNCHER.
 DESCRIPTION_DEFAULT_LAUNCHER_1=Wähle, ob TWiLight Menu++ oder das Nintendo DSi-Menü beim Start gestartet werden soll.
 DESCRIPTION_SYSTEMSETTINGS_1=Drücke \A, um Einstellungen im Zusammenhang mit dem Nintendo DSi-System zu ändern.
+
+; Unlaunch settings
+BACKGROUND=Background
+LAUNCHER_PATCHES=Launcher Patches
+
+DESCRIPTION_UNLAUNCH_BG=Ändert den Standardhintergrund von Unlaunch. Erfordert eine Neuinstallation von Unlaunch.
+DESCRIPTION_LAUNCHER_PATCHES=Enables or disables the DSi Splash Screen and the DSi Menu music.
 
 ; Skin select
 SKINSEL_DSI=Erscheinungsbild auswählen: Nintendo DSi-Menü
