--- a/settings/nitrofiles/languages/portuguese.ini
+++ b/settings/nitrofiles/languages/portuguese.ini
@@ -6,6 +6,7 @@ GUI_SETTINGS=Definições da GUI
 EMULATION_HB_SETTINGS=Definições emulação/HB
 GBARUNNER2_SETTINGS=Definições Emulação GBARunner2
 GAMESAPPS_SETTINGS=Definições dos Jogos e Apps
+UNLAUNCH_SETTINGS=Unlaunch settings
 PRESS_A=Pressiona \A
 
 ; GUI settings
@@ -187,7 +188,6 @@ LANGUAGE=Língua
 GAMELANGUAGE=Idioma do Jogo
 TITLELANGUAGE=Game Title Language
 COLORMODE=Modo de Cor
-UNLAUNCH_BG=Unlaunch BG
 SDREMOVALDETECTION=Detecção de remoção do SD
 S1SDACCESS=Slot-1 microSD access
 WIFI=WiFi
@@ -212,7 +212,6 @@ DESCRIPTION_LANGUAGE_1=Evita as selecções limitadas de língua do teu sistema 
 DESCRIPTION_GAMELANGUAGE_1=Defina o idioma para as ROMs de DS executadas através do nds-bootstrap.
 DESCRIPTION_TITLELANGUAGE_1=Set Banner Title language for DS ROMs (except DSiWare).
 DESCRIPTION_COLORMODE=Muda a cor das sus telas. Pode não funcionar em todas as áreas. Saia das configurações para que a mudança tenha efeito.
-DESCRIPTION_UNLAUNCH_BG=Changes the default background of Unlaunch. Requires re-installation of Unlaunch.
 DESCRIPTION_SDREMOVALDETECTION=Habilita / Desabilita a detecção de remoção do SD. Desabilite se uma mensagem de erro for exibida, ao invés do menu de ROMs.
 DESCRIPTION_S1SDACCESS_1=Allows your flashcard to be used as a secondary device. Turn this off if IR functionality doesn't work or if the app crashes.
 DESCRIPTION_WIFI=Select whether to use Nintendo WiFi Connection. Does not affect DS Download Play.
@@ -225,6 +224,13 @@ DESCRIPTION_SYSREGION_1=The region of SysNAND. "Auto" option will only work if S
 DESCRIPTION_LAUNCHERAPP=To get the .app name, press POWER, hold \A + \B, then highlight LAUNCHER.
 DESCRIPTION_DEFAULT_LAUNCHER_1=Select whether to launch TWiLight Menu++ or the Nintendo DSi Menu on boot.
 DESCRIPTION_SYSTEMSETTINGS_1=Press \A to change settings related to the Nintendo DSi system.
+
+; Unlaunch settings
+BACKGROUND=Background
+LAUNCHER_PATCHES=Launcher Patches
+
+DESCRIPTION_UNLAUNCH_BG=Changes the default background of Unlaunch. Requires re-installation of Unlaunch.
+DESCRIPTION_LAUNCHER_PATCHES=Enables or disables the DSi Splash Screen and the DSi Menu music.
 
 ; Skin select
 SKINSEL_DSI=Skin select: Nintendo DSi Menu
