--- a/settings/nitrofiles/languages/spanish.ini
+++ b/settings/nitrofiles/languages/spanish.ini
@@ -6,6 +6,7 @@ GUI_SETTINGS=Configuración de la interfaz
 EMULATION_HB_SETTINGS=Ajustes de Emulación/HB
 GBARUNNER2_SETTINGS=Ajustes de Emulación GBARunner2
 GAMESAPPS_SETTINGS=Configuración de juegos y apps
+UNLAUNCH_SETTINGS=Unlaunch settings
 PRESS_A=Presione \A
 
 ; GUI settings
@@ -60,7 +61,6 @@ DESCRIPTION_THEME_1=The theme to use in TWiLight Menu++. Press Left/Right to sel
 DESCRIPTION_DSIMUSIC=Select which song should be played in the Nintendo DSi, Nintendo 3DS, SEGA Saturn and Homebrew Launcher themes.
 DESCRIPTION_REFERSD=¿Estás usando una tarjeta SD o una tarjeta microSD?
 DESCRIPTION_UPDATE_RECENTLY_PLAYED_LIST=Actualiza La Lista Basada En Que Juego Has Jugado Recientemente, Deshabilita Esto Si Al Iniciar Un Juego O Aplicacion Causa Un "Guru Meditation Error".
-
 DESCRIPTION_SORT_METHOD=Cambia si ordenar alfabéticamente, por jugado recientemente, por más jugado, por tipo de archivo o personalizado.
 DESCRIPTION_DIRECTORIES_1=Si estás en una carpeta donde la mayoría de tus juegos están, es seguro ocultar directorios/carpetas.
 DESCRIPTION_SHOW_HIDDEN_1=Si se activa, no importará si la app está oculta o no, será ignorado y se mostrará de todas formas.
@@ -188,7 +188,6 @@ LANGUAGE=Idioma
 GAMELANGUAGE=Idioma del Juego
 TITLELANGUAGE=Idioma del Título del Juego
 COLORMODE=Modo de color
-UNLAUNCH_BG=FD Unlaunch
 SDREMOVALDETECTION=Detección de SD Removida
 S1SDACCESS=Acceso a microSD de Slot-1
 WIFI=Wi-Fi
@@ -213,7 +212,6 @@ DESCRIPTION_LANGUAGE_1=Evita las limitaciones de idioma de la consola selecciona
 DESCRIPTION_GAMELANGUAGE_1=Set language for DS ROMs played using nds-bootstrap.
 DESCRIPTION_TITLELANGUAGE_1=Set Banner Title language for DS ROMs (except DSiWare).
 DESCRIPTION_COLORMODE=Cambia el color de las pantallas. Puede no funcionar en todas las áreas. Sal de la configuración para que los cambios surtan efecto.
-DESCRIPTION_UNLAUNCH_BG=Changes the default background of Unlaunch. Requires re-installation of Unlaunch.
 DESCRIPTION_SDREMOVALDETECTION=Enables/Disables SD removal detection. Disable it if an error message is shown instead of the ROM menu.
 DESCRIPTION_S1SDACCESS_1=Allows your flashcard to be used as a secondary device. Turn this off if IR functionality doesn't work or if the app crashes.
 DESCRIPTION_WIFI=Select whether to use Nintendo WiFi Connection. Does not affect DS Download Play.
@@ -226,6 +224,13 @@ DESCRIPTION_SYSREGION_1=La región de SysNAND. La opción "Auto" sólo funcionar
 DESCRIPTION_LAUNCHERAPP=To get the .app name, press POWER, hold \A + \B, then highlight LAUNCHER.
 DESCRIPTION_DEFAULT_LAUNCHER_1=Select whether to launch TWiLight Menu++ or the Nintendo DSi Menu on boot.
 DESCRIPTION_SYSTEMSETTINGS_1=Press \A to change settings related to the Nintendo DSi system.
+
+; Unlaunch settings
+BACKGROUND=Background
+LAUNCHER_PATCHES=Launcher Patches
+
+DESCRIPTION_UNLAUNCH_BG=Changes the default background of Unlaunch. Requires re-installation of Unlaunch.
+DESCRIPTION_LAUNCHER_PATCHES=Enables or disables the DSi Splash Screen and the DSi Menu music.
 
 ; Skin select
 SKINSEL_DSI=Selección de skin: Menú de Nintendo DSi
