--- a/settings/nitrofiles/languages/italian.ini
+++ b/settings/nitrofiles/languages/italian.ini
@@ -6,6 +6,7 @@ GUI_SETTINGS=Impostazioni GUI
 EMULATION_HB_SETTINGS=Impostazioni Emulazione/HB
 GBARUNNER2_SETTINGS=Impostazioni Emulazione GBARunner2
 GAMESAPPS_SETTINGS=Impostazioni Giochi e App
+UNLAUNCH_SETTINGS=Unlaunch settings
 PRESS_A=Premi \A
 
 ; GUI settings
@@ -19,7 +20,7 @@ SORT_METHOD=Ordinamento
 DIRECTORIES=Directory/Cartelle
 SHOW_HIDDEN=Mostra file nascosti
 PREVENT_ROM_DELETION=Impedisci di cancellare o eliminare ROM
-BOXART=Box art/Copertine dei giochi
+BOXART=Box art
 ANIMATEDSIICONS=Icone DSi animate
 CLOCK_SYSTEM=Impostaz. Orologio
 AK_SCROLLSPEED=Velocità di scorrimento
@@ -178,7 +179,7 @@ DESCRIPTION_EXPANDROMSPACE_DSI=Estende lo spazio ROM nella RAM da 8MB a 12MB, o 
 DESCRIPTION_EXPANDROMSPACE_3DS=Estende lo spazio ROM nella RAM da 24MB a 28MB, o per i giochi SDK5, da 16MB a 28MB. Non fa funzionare alcuni giochi che stanno nella RAM.
 DESCRIPTION_CACHEBLOCKSIZE=A seconda delle dimensioni, alcune aree dei giochi DS(i) caricheranno leggermente più velocemente o più lentamente.
 DESCRIPTION_SAVEFATTABLECACHE=Salva la cache creata della Tavola FAT come un file di 512kb. Se si verifica una corruzione dell'SD, disattivala.
-DESCRIPTION_BOOTSTRAP_1=Scegli se usare bootstrap in versione rilascio o notturna
+DESCRIPTION_BOOTSTRAP_1=Scegli se usare bootstrap in versione rilascio o in versione notturna
 DESCRIPTION_DEBUG_1=Mostra del testo prima di avviare il gioco.
 DESCRIPTION_LOGGING_1=Registra il processo di patch in sd:/NDSBTSRP.LOG
 
@@ -187,7 +188,6 @@ LANGUAGE=Lingua
 GAMELANGUAGE=Lingua del gioco
 TITLELANGUAGE=Lingua titoli giochi
 COLORMODE=Modalità colore
-UNLAUNCH_BG=SF Unlaunch
 SDREMOVALDETECTION=Rileva disinserimento SD
 S1SDACCESS=Accesso microSD nello Slot-1
 WIFI=Wi-Fi
@@ -212,7 +212,6 @@ DESCRIPTION_LANGUAGE_1=Evita le selezioni limitate della lingua della tua consol
 DESCRIPTION_GAMELANGUAGE_1=Imposta la lingua per le ROM DS giocate usando nds-bootstrap.
 DESCRIPTION_TITLELANGUAGE_1=Imposta la lingua dei Titoli nel Banner per ROM DS (eccetto DSiWare).
 DESCRIPTION_COLORMODE=Cambia i colori degli schermi. Potrebbe non funzionare ovunque. Esci dalle impostazioni per applicare i cambiamenti.
-DESCRIPTION_UNLAUNCH_BG=Cambia lo sfondo predefinito di Unlaunch. Richiede la reinstallazione di Unlaunch.
 DESCRIPTION_SDREMOVALDETECTION=Attiva/Disattiva il rilevamento del disinserimento SD. Disabilitalo se viene mostrato un errore invece del menu ROM.
 DESCRIPTION_S1SDACCESS_1=Consente di utilizzare la tua flashcard come dispositivo secondario. Disattivalo se la funzionalità IR non funziona o se l'app si blocca.
 DESCRIPTION_WIFI=Seleziona se usare la Nintendo WiFi Connection. Il Download DS non viene affetto.
@@ -225,6 +224,13 @@ DESCRIPTION_SYSREGION_1=La regione della SysNAND. L'opzione "Auto" funzionerà s
 DESCRIPTION_LAUNCHERAPP=Per ottenere il nome .app, premi il pulsante POWER, tieni premuto A+B, poi evidenzia LAUNCHER.
 DESCRIPTION_DEFAULT_LAUNCHER_1=Selezionare se avviare TWiLight Menu++ o il menù Nintendo DSi all'avvio.
 DESCRIPTION_SYSTEMSETTINGS_1=Premi A per cambiare le impostazioni del tuo Nintendo DSi.
+
+; Unlaunch settings
+BACKGROUND=Background
+LAUNCHER_PATCHES=Launcher Patches
+
+DESCRIPTION_UNLAUNCH_BG=Cambia lo sfondo predefinito di Unlaunch. Richiede la reinstallazione di Unlaunch.
+DESCRIPTION_LAUNCHER_PATCHES=Enables or disables the DSi Splash Screen and the DSi Menu music.
 
 ; Skin select
 SKINSEL_DSI=Seleziona sottotema: Menù Nintendo DSi
